<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="CONVERTERS_COMMS" Id="{c162f4ba-a9b6-42e7-a4fb-400c412ae3dd}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM CONVERTERS_COMMS
VAR
	I: word;//loop  variable
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*
 ************************************************************************************************************
 * \file  CONVERTERS_COMMS
 * \author Quique
 * \version 1.0.0
 * \date Creation: 15/06/2022
 * \date Modification: 12/08/2022
 * \brief Programm to handle / arrange communications with converters
 ************************************************************************************************************
 \defgroup CONVERTERS
 
 \brief 	This program takes P and Q from all algorithms to write it to all converters
		
 \details 	First part takes P and Q from algorithms and write them to converters
 			
 			Second part handles communications with metering board to accomplish I.3.4 from RD 244/19
			
			Third part writes relevant bits to inverters using a single modbus register, but bitwisely,
			so that
			
			bit 0 --> Stop / start command
			bit 1 --> Heartbeat to converters.
			bit 2 --> Night mode enabling.
 
*)

FOR I := 1 TO GVL_CONV_COMMS.NUMBER_CONVERTERS DO;
	
	GVL_CONV_COMMS.Setpoint_P[I] := REAL_TO_WORD(GVL_P_CONTROL.P_output);
	GVL_CONV_COMMS.Setpoint_Q[I] := REAL_TO_INT(GVL_Q_CONTROL.Q_output);

	//Powermeter loss comms section
	IF GVL_POWERMETER.Alg_lost_comms_enable THEN		
		IF GVL_POWERMETER.M_board_Meter_status <> 8 THEN
			GVL_CONV_COMMS.Setpoint_P[I] := REAL_TO_WORD(GVL_P_CONTROL.P_safety);
			GVL_CONV_COMMS.Setpoint_Q[I] := REAL_TO_INT(GVL_Q_CONTROL.Q_safety);
		END_IF
	END_IF
	
	CASE GVL_POWERMETER.M_board_Meter_status OF
		8: GVL_POWERMETER.Meter_comms_status:= TRUE;
		ELSE
			GVL_POWERMETER.Meter_comms_status:= FALSE;
	END_CASE
	
	IF ((GVL_CONV_COMMS.Comms_Control_Word[I] AND 16#0001) > 0 ) THEN
			GVL_CONV_COMMS.Start_Command[I] := 1;
		ELSE
			GVL_CONV_COMMS.Start_Command[I] := 0;
		END_IF
		
		IF ((GVL_CONV_COMMS.Comms_Control_Word[I] AND 16#0002) > 0 ) THEN
			GVL_CONV_COMMS.Night_Mode_Active[I] := 1;
		ELSE
			GVL_CONV_COMMS.Night_Mode_Active[I] := 0;
		END_IF
END_FOR;

//****************************************************************************************
//                               n/N COEFFICIENT
//****************************************************************************************

nN_coeff_calculation();

//****************************************************************************************
//                               MODBUS COMMS MAPPING
//****************************************************************************************

Modbus_mapping();]]></ST>
    </Implementation>
    <LineIds Name="CONVERTERS_COMMS">
      <LineId Id="264" Count="35" />
      <LineId Id="301" Count="1" />
      <LineId Id="338" Count="2" />
      <LineId Id="342" Count="1" />
      <LineId Id="341" Count="0" />
      <LineId Id="303" Count="11" />
      <LineId Id="316" Count="0" />
      <LineId Id="323" Count="10" />
      <LineId Id="184" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>